[package]
name = "muid-rust"
version = "0.1.0"
authors = ["Rusty Conover <rusty@conover.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
hex-literal = "0.3.0"
serde_json = "1.0.56"
hex = "0.4.2"

[dependencies]
hex-literal = "0.3.0"
ring = "0.16.15"
hex = "0.4.2"
num_cpus = "1.13.0"
random-fast-rng = { version="0.1.1", features=["std"] }
