[package]
name = "muid"
version = "0.1.2"
authors = ["Rusty Conover <rusty@conover.me>"]
edition = "2018"
license = "MIT"
homepage = "https://www.muid.org/"
description = "A Rust implementation for mining muids"
repository = "https://github.com/rustyconover/muid-rust"
include = ["src/**/*", "Cargo.toml", "animals.json", "build.rs"]

# See more keys and their definitions at https://doc.rust-lacarng.org/cargo/reference/manifest.html

[build-dependencies]
hex-literal = "0.3.0"
serde_json = "1.0.56"
hex = "0.4.2"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
hex-literal = "0.3.0"
ring = "0.16.15"
hex = "0.4.2"
num_cpus = "1.13.0"
random-fast-rng = { version="0.1.1", features=["std"] }
